[gd_scene load_steps=9 format=3 uid="uid://bkcnyk5w2eiec"]

[ext_resource type="Script" path="res://Scripts/UI/PopUp.gd" id="1_12m4w"]
[ext_resource type="Texture2D" uid="uid://bwkh6xmr10k8j" path="res://Assets/UI/Rectangle_1_copy.png" id="1_73cy1"]
[ext_resource type="Texture2D" uid="uid://cl30fu4p3nem7" path="res://Assets/1920x1080-black-solid-color-background.jpg" id="2_kuxx0"]
[ext_resource type="Texture2D" uid="uid://c4fhorflxm7lb" path="res://Assets/UI/Rectangle_1.png" id="2_nys1a"]

[sub_resource type="LabelSettings" id="LabelSettings_g6khm"]
font_size = 60

[sub_resource type="Animation" id="Animation_mre2g"]
resource_name = "PopUp"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PopUpBackground:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PopUpBackground:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_o8q8b"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PopUpBackground:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PopUpBackground:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xriuc"]
_data = {
"PopUp": SubResource("Animation_mre2g"),
"RESET": SubResource("Animation_o8q8b")
}

[node name="LooseScreen" type="CanvasLayer"]
script = ExtResource("1_12m4w")

[node name="FadedBackground" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.329412)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_kuxx0")
expand_mode = 1

[node name="PopUpBackground" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -300.0
offset_right = 500.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(500, 300)
texture = ExtResource("1_73cy1")
expand_mode = 1

[node name="Control" type="Control" parent="PopUpBackground"]
anchors_preset = 0
offset_right = 1000.0
offset_bottom = 600.0

[node name="TitleLabel" type="Label" parent="PopUpBackground/Control"]
layout_mode = 2
offset_top = 50.0
offset_right = 1000.0
offset_bottom = 133.0
grow_horizontal = 2
grow_vertical = 2
text = "You Loose!"
label_settings = SubResource("LabelSettings_g6khm")
horizontal_alignment = 1

[node name="ContinueButton" type="TextureButton" parent="PopUpBackground/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -400.0
offset_top = -100.0
offset_right = -100.0
offset_bottom = -41.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("2_nys1a")
ignore_texture_size = true
stretch_mode = 0

[node name="QuitButton" type="TextureButton" parent="PopUpBackground/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = -100.0
offset_right = 400.0
offset_bottom = -41.0
grow_vertical = 0
texture_normal = ExtResource("2_nys1a")
ignore_texture_size = true
stretch_mode = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xriuc")
}

[connection signal="pressed" from="PopUpBackground/Control/QuitButton" to="." method="_on_quit_button_pressed"]
